force-app/main/default/objects/JBCXM__CustomerFeatures__c/JBCXM__CustomerFeatures__c.object-meta.xml
<CustomObject>
    <label>Customer Features</label>
    <nameField>
        <label>Customer Features Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>