force-app/main/default/objects/JBCXM__CustomerFeatures__c/fields/JBCXM__Features__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Features__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Features</label>
    <referenceTo>JBCXM__Features__c</referenceTo>
    <relationshipLabel>Customer Features</relationshipLabel>
    <relationshipName>Customer_Features</relationshipName>
    <type>Lookup</type>
</CustomField>