force-app/main/default/objects/JBCXM__CustomerFeatures__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>NAME</columns>
    <columns>JBCXM__Account__c</columns>
    <columns>JBCXM__Features__c</columns>
    <columns>JBCXM__Enabled__c</columns>
    <columns>JBCXM__Licensed__c</columns>
    <columns>JBCXM__Comment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>